docker-registry/07-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-services
  namespace: docker-registry
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: http-5000
  selector:
    app: docker-registry
